--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,9 @@ jobs:
           - x86
     steps:
       - uses: actions/checkout@v2
+      - uses: julia-actions/add-julia-registry@v1
+        with:
+          registry: https://github.com/emmt/EmmtRegistry
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
