--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,13 +28,11 @@ jobs:
           - x86
     steps:
       - uses: actions/checkout@v2
-      - uses: julia-actions/add-julia-registry@v1
-        with:
-          registry: https://github.com/emmt/EmmtRegistry
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - run: julia -e 'import Pkg; Pkg.Registry.add(Pkg.RegistrySpec("General")); Pkg.Registry.add(Pkg.RegistrySpec(url = "https://github.com/emmt/EmmtRegistry"));'
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
